<resources>
    <string name="app_name">Note Your Note</string>
    <string name="account_already_exists">Account already exists</string>
    <string name="account_not_found">No accounts match that information</string>
    <string name="action_delete">Delete</string>
    <string name="action_done">Done</string>
    <string name="action_logout">Log out</string>
    <string name="action_map">Map</string>
    <string name="action_more">More</string>
    <string name="action_save_message">Do you want to save local notes to the cloud?</string>
    <string name="camera">Camera</string>
    <string name="cancelled">Cancelled</string>
    <string name="email_error_message">Please enter a valid email.</string>
    <string name="error_message">An error has occurred. Please try again</string>
    <string name="exit_note_message">Are you sure to exit? All unsaved changes will be lost.</string>
    <string name="find_your_account">Find Your Account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_message">Forgot your password? It happens.\nWe\'ll send you a link to reset it.</string>
    <string name="gallery">Gallery</string>
    <string name="get_device_location_message">Do you want to locate the note in your current position?</string>
    <string name="gps_error_message">Do you want to turn on GPS?</string>
    <string name="location_not_found">Location not found. Please try again</string>
    <string name="gps_error_title">GPS is not enabled.</string>
    <string name="helper_text">Use at least six characters.</string>
    <string name="hint_description">Description</string>
    <string name="hint_email">Email</string>
    <string name="hint_location">Location</string>
    <string name="hint_password">Password</string>
    <string name="hint_title">Title</string>
    <string name="image_error_message">Image too large. Please try again</string>
    <string name="log_in">Log In</string>
    <string name="log_in_error_message">This email and password combination is incorrect. Please try again.</string>
    <string name="log_in_message">Already have an account? Log in.</string>
    <string name="no">No</string>
    <string name="no_connection">No connection</string>
    <string name="note_deleted_successfully">Note deleted successfully</string>
    <string name="note_image">Note image</string>
    <string name="note_updated_successfully">Note updated successfully</string>
    <string name="note_saved_successfully">Note saved successfully</string>
    <string name="or">OR</string>
    <string name="play">Play</string>
    <string name="place_not_found">We have not found this place. Try another or clear the text.</string>
    <string name="record_audio">Record audio</string>
    <string name="recorder">Recorder</string>
    <string name="sent_email_message">We just sent you a password reset email</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">Don\'t have an account? Sign up.</string>
    <string name="skip">Skip for now</string>
    <string name="speak">Speak</string>
    <string name="stop">Stop</string>
    <string name="stop_record_audio">Stop record audio</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_empty_error_message">A title is required</string>
    <string name="upload_from">Upload from</string>
    <string name="yes">Yes</string>
</resources>
