<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_title"
                    android:inputType="none"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btn_add_image"
                android:layout_width="400dp"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="@android:color/white"
                android:contentDescription="@string/note_image"
                android:scaleType="centerCrop"
                android:src="@drawable/camera" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <Button
                    android:id="@+id/btn_record"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/record_audio"
                    android:textAllCaps="false"
                    style="@android:drawable/btn_default" />

                <Button
                    android:id="@+id/btn_play"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/play"
                    android:textAllCaps="false"
                    style="@android:drawable/btn_default" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/location_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/note_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_my_location"
                    android:drawablePadding="10dp"
                    android:hint="@string/hint_location"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/note_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_description"
                    android:inputType="none"
                    tools:ignore="Autofill" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_speech"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_text_to_speech"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/speak"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>